[update] add lauch json
